--- a/contact/index.html
+++ b/contact/index.html
@@ -3,18 +3,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sadia's Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">
-                <img src="Logo.png" alt="the-logo">
+                <img src="../images/Logo.png" alt="the-logo">
             </div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="../contact/index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -55,8 +55,8 @@
     <footer>
         <div class="bottom">
             <div class="socialmedia">
-                <li><a href="https://www.linkedin.com/feed/"><img src="Icons/linkedin.png" alt="linkedin" class="iconn"></a></li>
-                <li><a href="https://www.x.com/feed/"><img src="Icons/Twitter_White.png" alt="Twitter_White"></a></li>
+                <li><a href="https://www.linkedin.com/feed/"><img src="../Icons/linkedin.png" alt="linkedin" class="iconn"></a></li>
+                <li><a href="https://www.x.com/feed/"><img src="../Icons/Twitter_White.png" alt="Twitter_White"></a></li>
             </div>
             <p>&copy; 2025 <a href="https://github.com/TechMe-co">Sadiya Gambo</a></p>
         </div>
