--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="Logo.png" alt="the-logo">
+                <img src="./images/Logo.png" alt="the-logo">
             </div>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="project.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="./projects/index.html">Projects</a></li>
+                <li><a href="./contact/index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -29,14 +29,14 @@
             </p>
         </div>
         <div class="mainImg">
-            <img src="Profile picc.png" alt="Profile">
+            <img src="./images/sadia.jpg" alt="Profile">
         </div>
     </main>
     <footer>
         <div class="bottom">
             <div class="socialmedia">
-                <li><a href="https://www.linkedin.com/feed/"><img src="Icons/linkedin.png" alt="linkedin" class="iconn"></a></li>
-                <li><a href="https://www.x.com/feed/"><img src="Icons/Twitter_White.png" alt="Twitter_White"></a></li>
+                <li><a href="https://www.linkedin.com/feed/"><img src="./Icons/linkedin.png" alt="linkedin" class="iconn"></a></li>
+                <li><a href="https://www.x.com/feed/"><img src="./Icons/Twitter_White.png" alt="Twitter_White"></a></li>
             </div>
             <p>&copy; 2025 <a href="https://github.com/TechMe-co">Sadiya Gambo</a></p>
         </div>
